Bugfix/ax 2610 fix discovery chart AX_2618 AX_2619 AX_2614 (#2135)
* Changed empty sytem condition to be as before so that image is not visible in the begining

* Revert "Changed empty sytem condition to be as before so that image is not visible in the begining"

This reverts commit ec00e53910224cb986ba928bee0202a589fdc141.

* AX-2148 Fixed the query for fetching data with certain field value

* AX-2146 Fixed link from single intersecting query pic chart slice

* Removed bug defender

* Fixed bytes

* Revert "Fixed bytes"

This reverts commit bda3b5cbc608d08b9aeadbaf0ab7fc2bfc05a897.

* AX-2614 Report generation working again

* Fixed the chart

* Styling changes

* Shrink more

* Fixed

* Fixed styling

* Beautified

* Fixed test

* Update ui_test_base.py

* Fixed metric

--- a/plugins/gui/templates/report/styles/styles.css
+++ b/plugins/gui/templates/report/styles/styles.css
@@ -179,6 +179,9 @@ a {
 .w-16 {
     width: 16px;
 }
+.w-30 {
+    width: 30px;
+}
 
 .no-break {
     page-break-inside: avoid;
@@ -220,24 +223,22 @@ a {
 }
 .histogram .item {
     position: relative;
-    line-height: 7px;
-    margin-bottom: 2px;
-    top: 1px;
-    height: 7px;
+    margin-bottom: 8px;
+    line-height: 24px;
+}
+.histogram .item-bar {
+    line-height: 24px;
+    vertical-align: middle;
 }
 .histogram .item .quantity {
-    width: 60px;
-    text-align: center;
-    margin-right: 0;
-    margin-left: auto;
     font-weight: 500;
     font-size: 14px;
 }
 .histogram .item .bar {
-    height: 10px;
-    background-color: rgba(222, 222, 222, 0.4);
+    height: 8px;
+    background-color: rgba(222, 222, 222, 1);
 }
-.histogram .title{
+.histogram .title {
     margin-top: 1px;
 }
 .title {
